Add ability to modify loan institution attribute.

Add a new choice to editselectionwizardpage to modify only loan attributes.
Add a new loanattributes page to modify just institution for now, will add other attributes next.

BUG:257619
REVIEW:114767